--- a/package.json
+++ b/package.json
@@ -43,15 +43,15 @@
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
+    "eslint-config-next": "^16.1.1",
     "geist": "^1.3.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
-    "eslint-config-next": "16.1.1",
-    "next": "16.1.1",
+    "next": "^16.1.1",
     "next-themes": "^0.4.4",
-    "react": "19.2.3",
+    "react": "^19.2.3",
     "react-day-picker": "8.10.1",
-    "react-dom": "19.2.3",
+    "react-dom": "^19.2.3",
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
